clusters/calcifer-cloud/apps/web/edge-proxies/zigbee2mqtt/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: zigbee2mqtt-security-headers
  namespace: web
spec:
  headers:
    contentTypeNosniff: true
    frameDeny: true
    referrerPolicy: no-referrer
    stsSeconds: 31536000
    stsIncludeSubdomains: true
