clusters/calcifer-cloud/apps/web/edge-proxies/zigbee2mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt-home
  namespace: web
spec:
  ports:
    - name: https
      port: 443
      targetPort: 443
